# NfcAimeReader

./: CONTRIBUTING.md  README.md  settings.gradle.kts  tatus
.github/: pull-request-template.md  release.json
.github/workflows/: android.yml  build_release.yml  release.yml
NfcAimeReader.Android/: build.gradle.kts  settings.gradle.kts
NfcAimeReader.Android/app/: build.gradle.kts
NfcAimeReader.Android/app/src/androidTest/java/org/ohdj/nfcaimereader/: ExampleInstrumentedTest.kt
NfcAimeReader.Android/app/src/main/: AndroidManifest.xml
NfcAimeReader.Android/app/src/main/java/org/ohdj/nfcaimereader/: App.kt  AppViewModel.kt  MainActivity.kt  MainApplication.kt  ThemeMode.kt  UserPreferenceViewModel.kt
NfcAimeReader.Android/app/src/main/java/org/ohdj/nfcaimereader/data/datastore/: UserPreferenceViewModel.kt  WebSocketPreferences.kt
NfcAimeReader.Android/app/src/main/java/org/ohdj/nfcaimereader/data/preference/: UserPreferenceViewModel.kt
NfcAimeReader.Android/app/src/main/java/org/ohdj/nfcaimereader/data/repository/: WebSocketRepository.kt
NfcAimeReader.Android/app/src/main/java/org/ohdj/nfcaimereader/data/websocket/: WebSocketClient.kt
NfcAimeReader.Android/app/src/main/java/org/ohdj/nfcaimereader/di/: AppModule.kt
NfcAimeReader.Android/app/src/main/java/org/ohdj/nfcaimereader/model/: WebSocketServerInfo.kt
NfcAimeReader.Android/app/src/main/java/org/ohdj/nfcaimereader/screen/card/: CardScreen.kt
NfcAimeReader.Android/app/src/main/java/org/ohdj/nfcaimereader/screen/home/: HomeScreen.kt
NfcAimeReader.Android/app/src/main/java/org/ohdj/nfcaimereader/screen/navigation/: AppNavigation.kt  AppNavigationBar.kt  Screen.kt
NfcAimeReader.Android/app/src/main/java/org/ohdj/nfcaimereader/screen/setting/: SettingScreen.kt
NfcAimeReader.Android/app/src/main/java/org/ohdj/nfcaimereader/ui/navigation/: AppNavigationBar.kt  BottomNavigation.kt  BottomNavigationItem.kt  Navigation.kt
NfcAimeReader.Android/app/src/main/java/org/ohdj/nfcaimereader/ui/screen/: Screen.kt
NfcAimeReader.Android/app/src/main/java/org/ohdj/nfcaimereader/ui/theme/: Color.kt  ExtendedColorScheme.kt  Theme.kt  Type.kt
NfcAimeReader.Android/app/src/main/java/org/ohdj/nfcaimereader/ui/viewmodel/: HomeViewModel.kt  (+2 more)
NfcAimeReader.Android/app/src/main/java/org/ohdj/nfcaimereader/utils/: DataStoreManager.kt  NetworkScanner.kt  NfcManager.kt  NfcState.kt  NfcStateBroadcastReceiver.kt  NfcStateManager.kt  WebSocketManager.kt
NfcAimeReader.Android/app/src/main/java/org/ohdj/nfcaimereader/views/: ConnectionScreen.kt  MainScreen.kt  NfcCardScreen.kt  SettingsView.kt
NfcAimeReader.Android/app/src/main/res/values/: themes.xml
NfcAimeReader.Android/app/src/test/java/org/ohdj/nfcaimereader/: ExampleUnitTest.kt
NfcAimeReader.Android/gradle/: libs.versions.toml
NfcAimeReader.Android/gradle/wrapper/: gradle-wrapper.properties
NfcAimeReaderDLL/: Card.cs  Config.cs  DllMain.cs  LICENSE  NativeMethods.txt  NfcAimeReaderDLL.csproj  NfcAimeReaderDLL.sln  RC4Decryption.cs  WebSocketMessageModel.cs  WebSocketServers.cs
NfcAimeReaderDLL/Properties/PublishProfiles/: FolderProfile.pubxml
aimeio-multi/: .gitignore  meson.build  readme.md
aimeio-multi/aimeio/: aimeio.c  aimeio.def  meson.build
app/: build.gradle.kts
app/src/androidTest/java/com/example/nfcaimereader/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/nfcaimereader/: MainActivity.java
app/src/main/java/com/example/nfcaimereader/Client/: SpiceClient.java  WebSocketCustomClient.java
app/src/main/java/com/example/nfcaimereader/Client/Utils/: RC4.java
app/src/main/java/com/example/nfcaimereader/Connect/: SpiceWebSocket.java
app/src/main/java/com/example/nfcaimereader/Controllers/: EditableHostnameAndPort.java  ServerSettingsDialog.java
app/src/main/java/com/example/nfcaimereader/Drawables/: UiUpdater.java  UiUpdaterManager.java
app/src/main/java/com/example/nfcaimereader/Services/: NfcEventListener.java  NfcHandler.java  NfcHelper.java  NfcManager.java  NfcStateReceiver.java  NfcTagListener.java  NfcViewModel.java
app/src/main/java/com/example/nfcaimereader/Utils/: AppSetting.java
app/src/main/java/com/example/nfcaimereader/connect/: SpiceWebSocket.java
app/src/main/res/drawable/: ic_editor_edit.xml
app/src/main/res/layout/: activity_main.xml  dialog_server_edit.xml  server_settings_view.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: nfc_tech_filter.xml
app/src/test/java/com/example/nfcaimereader/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
segatools/: meson.build
segatools/aimeio/: aimeio.c
(+23 files in other folders)
